2006-03-11  Marek Sieradzki  <marek.sieradzki@gmail.com> 

	* BatchingImpl.cs: Updated with BuildTask instead of TaskElement.
	* BuildItem.cs: Updated for new API and fixed crashing on non-existent
	files.
	* BuildItemGroup.cs, BuildItemGroupCollection.cs, BuildProperty.cs,
	BuildPropertyGroup.cs, BuildPropertyGroupCollection.cs, ConsoleLogger.cs,
	Engine.cs, Project.cs, Target.cs, TargetCollection.cs: Updated for new
	API.
	* DirectoryScanner.cs: Fixed ordering and crashing on duplicated items.
	* TaskElement.cs: Temporarily removed.
	* Xml.cs: Changed to static.

2006-02-26  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* IBuildProperty.cs, ICultureStringUtilities.cs, IProject.cs,
	IGlobalEngineAccessor.cs, ITaskElement.cs, IBuildPropertyGroup.cs,
	ITargetCollection.cs, IEngine.cs, IBuildItemGroupCollection.cs,
	IHostLogger.cs, IBuildItem.cs, IHostFeedback.cs,
	ILangSecurityLevelChecker.cs, ITarget.cs, IBuildItemGroup.cs,
	IBuildPropertyGroupCollection.cs: Removed.

2006-02-26  Marek Sieradzki  <marek.sieradzki@gmail.com> 

	* BuildItem.cs: Removed IBuildItem references.
	* BuildItemGroup.cs: Removed ItemPropertyGroupingBase and
	IBuildItemGroup references. Changed Evaluate to internal.
	* BuildItemGroupCollection.cs. Removed IBuildItemGroupCollection
	reference and hidden constructors.
	* BuildProperty.cs: Removed IBuildProperty reference.
	* BuildPropertyGroup.cs: Removed ItemPropertyGroupingBase and
	IBuildPropertyGroup references. Changed Evaluate to internal.
	* BuildPropertyGroupCollection.cs: Removed IBuildPropertyGroupCollection
	reference and hidden constructors.
	* ConsoleLogger.cs: Updated names of event handlers.
	* Engine.cs: Removed IEngine reference. Removed ClearAllProjects and
	Escape. Added UnloadAllProjects () and UnloadProject ().
	* FileLogger.cs: Removed ApplyParameter ().
	* GroupingCollection.cs: Hidden.
	* InvalidProjectFileException.cs: Removed HasBeenLogged property.
	* ItemPropertyGroupingBase.cs: Commented.